[gd_scene load_steps=8 format=3 uid="uid://b5ca0xunrblw1"]

[ext_resource type="Script" path="res://menu.gd" id="1_bmcdj"]
[ext_resource type="Texture2D" uid="uid://ri1xbkuf5fnb" path="res://Game Logo/Ari_GameTitle.png" id="2_0awpc"]
[ext_resource type="FontFile" uid="uid://b2nrwwb8gsbqu" path="res://_fonts/Banana Stick.otf" id="2_a4yjc"]
[ext_resource type="StyleBox" uid="uid://bh60l478xylq6" path="res://hover.tres" id="3_5gqdd"]
[ext_resource type="StyleBox" uid="uid://b3j5t3i5gl85u" path="res://orangebuttons.tres" id="3_o4gai"]

[sub_resource type="FontVariation" id="FontVariation_xcnva"]
base_font = ExtResource("2_a4yjc")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oky3b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_bmcdj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -238.0
offset_top = -322.0
offset_right = 4562.0
offset_bottom = 2478.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_0awpc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -31.0
offset_right = 227.0
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_hover_color = Color(0.687678, 0.946178, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_xcnva")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_oky3b")
theme_override_styles/hover = ExtResource("3_5gqdd")
theme_override_styles/pressed = ExtResource("3_o4gai")
theme_override_styles/normal = ExtResource("3_o4gai")
text = "Play"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_hover_color = Color(0.687678, 0.946178, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_xcnva")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_oky3b")
theme_override_styles/hover = ExtResource("3_5gqdd")
theme_override_styles/pressed = ExtResource("3_o4gai")
theme_override_styles/normal = ExtResource("3_o4gai")
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_hover_color = Color(0.687678, 0.946178, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_xcnva")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_oky3b")
theme_override_styles/hover = ExtResource("3_5gqdd")
theme_override_styles/pressed = ExtResource("3_o4gai")
theme_override_styles/normal = ExtResource("3_o4gai")
text = "Credits"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_hover_color = Color(0.687678, 0.946178, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_xcnva")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_oky3b")
theme_override_styles/hover = ExtResource("3_5gqdd")
theme_override_styles/pressed = ExtResource("3_o4gai")
theme_override_styles/normal = ExtResource("3_o4gai")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
